# laodeng

./: CLAUDE.md  README.md  main.py  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-image-gen-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-image-gen-cli/checklists/: requirements.md
specs/001-image-gen-cli/contracts/: cli.md  provider.md
src/laodeng/: __init__.py  exceptions.py
src/laodeng/cli/: __init__.py  __main__.py  gen_image.py
src/laodeng/models/: __init__.py  generation.py
src/laodeng/providers/: __init__.py  base.py  t8star.py
tests/: test_main.py
tests/integration/: test_cli.py
tests/unit/: test_models.py  test_providers.py
