[project]
name = "laodeng"
version = "0.1.0"
description = "laodeng - A Python application"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "loguru>=0.7.3",
    "requests>=2.33.1",
]

[project.scripts]
gen-image = "laodeng.cli.gen_image:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laodeng"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
